--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,9 @@
-name: publish
+name: publish to pub.dev
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - master
 
 jobs:
   publishing:
