--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: faunadb_http
 version: 0.4.0
-description: A pure Dart implementation of a FaunaDB client.
+description: A pure Dart implementation of a FaunaDB client and provides query classes that closely mimic FQL functions.
 homepage: https://github.com/gavanitrate/faunadb-http-dart
 
 environment:
