--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: A pure Dart implementation of a FaunaDB client and provides query c
 homepage: https://github.com/gavanitrate/faunadb-http-dart
 
 environment:
-  sdk: '>=2.8.1 <3.0.0'
+  sdk: '>=2.9.0 <3.0.0'
 
 dependencies:
   http: ^0.12.2
@@ -12,4 +12,5 @@ dependencies:
 
 dev_dependencies:
   json_serializable: ^3.3.0
-  build_runner: ^1.10.0
+  build_runner: ^1.10.1
+  pedantic: ^1.9.0
